--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.7, 3.8, 3.9, 3.10, 3.11]
+        python-version: [3.11]
 
     steps:
     - uses: actions/checkout@v3
@@ -28,6 +28,7 @@ jobs:
     - name: Run Tests
       run: |
         python manage.py test
+        
     - name: Build & push Docker image
       uses: mr-smithers-excellent/docker-build-push@v5
       with:
