--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -33,7 +33,9 @@ jobs:
       uses: mr-smithers-excellent/docker-build-push@v5
       with:
         image: elghallali/django-web-app-image
-        tags: latest
+        tag_with_ref: true
+        tag_with_sha: true
+        tags: ${{ github.sha}}
         registry: docker.io
         dockerfile: Dockerfile
         username: ${{ secrets.DOCKER_USERNAME }}
